# p2p-chat

./: Cargo.toml
src/: main.rs
src/models/: app.rs  args.rs  client.rs  file.rs  message.rs  mod.rs  swarm_manager.rs
src/models/client/: client.rs  command.rs  mod.rs
src/models/common/: command.rs  errors.rs  file.rs  message.rs  mod.rs  short_peer_id.rs
src/models/swarm/: behaviour.rs  errors.rs  file.rs  message.rs  mod.rs  short_peer_id.rs  swarm_manager.rs
src/traits/: decode.rs  encode.rs
