[package]
name = "p2p-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1.44.1", features = ["full"]}
libp2p = { version = "0.55.0", features =[
    "macros", "tcp", "tokio",
    "noise", "yamux", "mdns",
    "gossipsub", "quic"
], default-features = false}
anyhow = "1.0.97"
serde = { version = "1.0.219", features = ["derive"], default-features = false}
bincode = {version = "2.0.1", features = ["serde", "std"], default-features = false}
thiserror = "2.0.12"
log = "0.4.27"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3.19.1"